--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,9 @@
       <li>
         <button [routerLink]="'people'">People</button>
       </li>
+      <li>
+        <button [routerLink]="'rxjs'">RXJS</button>
+      </li>
     </ul>
   </div>
   <router-outlet></router-outlet>
