switchMap concatMap mergeMap exhaustMap

--- a/src/app/components/rxjs/rxjs-main/rxjs-main.html
+++ b/src/app/components/rxjs/rxjs-main/rxjs-main.html
@@ -1,4 +1,5 @@
 <div style="display: flex; flex-direction: column">
   <app-rxjs-one></app-rxjs-one>
   <app-rxjs-two></app-rxjs-two>
+  <app-rxjs-maps></app-rxjs-maps>
 </div>
