remove unnecessary text from button label

--- a/src/app/components/rxjs/rxjs-maps/rxjs-maps.html
+++ b/src/app/components/rxjs/rxjs-maps/rxjs-maps.html
@@ -1,4 +1,4 @@
-<button (click)="generateId()">Сделать запрос (switchMap)</button>
+<button (click)="generateId()">Сделать запрос</button>
 @if (loading) {
   <div>Загрузка...</div>
 }
